more ui improvements (#757)
* unit action: when an exclusive decision is made, deselect unit

* clicking on the unit information in the UnitTable will show that unit + minor fixes

* siege units won't show movement hints when set up, while packing up does not cost any movement points

* workers: highlight button when constructing an improvement, won't sleep then

* fixed broken saved game

* show messages if exploring is done or WorkerAutomation is done

* Revert "siege units won't show movement hints when set up, while packing up does not cost any movement points"

This reverts commit b805993a

--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -408,5 +408,11 @@
             Portuguese:"Encontramos um estoque de [quantidade] de ouro nas ruínas!"
         }
 
+        "[unit] finished exploring.": {
+            "German": "[unit] hat die Erkundung abgeschlossen."
+        },
 
+        "[unit] has no work to do.": {
+            "German": "[unit] hat keine Arbeit mehr."
+        }
 }
