--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -409,10 +409,12 @@
         }
 
         "[unit] finished exploring.": {
+            Italian:"[unit] ha terminato la sua esplorazione."
             "German": "[unit] hat die Erkundung abgeschlossen."
         },
 
         "[unit] has no work to do.": {
+            Italian:"[unit] è inattiva."
             "German": "[unit] hat keine Arbeit mehr."
         }
 }
