--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2553,6 +2553,7 @@
 	}
 	
 	"We have encountered the City-State of [name]!":{ // e.g. the Cultured city state of Vienna
+		Italian:"Abbiamo incontrato la Citta-Stato di [name]!"
 	}
 	
 	// Friendship declaration flavor texts
@@ -2671,9 +2672,6 @@
 		Italian:"I nostri accordi di passaggio hanno avvicinato le nostre nazioni."
 		French:"Notre Accord de libre passage nous a rapprochés"
 		Simplified_Chinese:"开放的边界促进了彼此的了解，让我们的人民心心相通！"
-	}
-	
-	"Your so-called 'friendship' is worth nothing.":{ // When we have a decleration of friendship to someone and we declare war on them
 	}
 	
 ////// Overview screen
