Removed portuguese misspelling

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -739,7 +739,7 @@
 		Italian:"Turni tra autosalvataggi"
 		French:"Tours avant sauvegarde automatique"
 		Simplified_Chinese:"自动存档回合数"
-		Português:"Turnos entre autosaves"
+		Portuguese:"Turnos entre autosaves"
 	}
 	
 	"Sound effects volume":{
