--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2573,6 +2573,10 @@
 		Simplified_Chinese:"再见。"
 		Portuguese:"Adeus."
 	}
+
+	"Sounds good!":{
+		Italian:"Sta bene!"	
+	}
 	
 	"Not this time.":{ // declining trade text
 		Italian:"Non questa volta."
@@ -2610,7 +2614,6 @@
 	}
 	
 	"We have encountered the City-State of [name]!":{ // e.g. the Cultured city state of Vienna
-
 		Italian:"Abbiamo incontrato la Citta-Stato di [name]!"
 		Portuguese:"Nós encontramos a cidade-estado de [name]"
 
@@ -2757,7 +2760,7 @@
 
 
 	"Your so-called 'friendship' is worth nothing.":{ // When we have a decleration of friendship to someone and we declare war on them
-    Italian:"La tua cosiddetta 'amicizia' non vale nulla!"  
+    		Italian:"La tua cosiddetta 'amicizia' non vale nulla!"  
 		Portuguese:"Sua chamada 'amizade' não vale nada."
 	}
 
