units support single-tap move (#750)
* implemented single tap move
- units stay selected after move (to go on moving)
- and they are de-selectable by taping them again (to abort moving)

* unit movement: mark the reachable spots clearly to avoid accidental movement

* unit action: when an exclusive decision is made, deselect unit

* clicking on the unit information in the UnitTable will show that unit + minor fixes

* siege units won't show movement hints when set up, while packing up does not cost any movement points

* workers: highlight button when constructing an improvement, won't sleep then

* fixed units not being de-selected when clicking the UnitTable or "next unit" button

* zooming forwards clicks on to the map, so we need to deselect units in that case

* clean up branch

* added "Move units with a single tap" to options menu

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -151,7 +151,7 @@
 		Russian:"Бомбардная сила"
 		French:"Force de bombardement"
 		Romanian:"Puterea bombardamentului"
-		German:"Bombardieren Sie die Stärke"
+		German:"Stärke Bombardierung"
 		Dutch:"Bombard sterkte"
 		Spanish:"Fuerza de bombardeo"
 		Simplified_Chinese:"远程轰击"
@@ -803,8 +803,14 @@
 	"Check for idle units":{
 		Italian:"Controlla unità inutilizzate"
 		Simplified_Chinese:"查看未行动单位"
-		Portuguese:"Cheque por unidades sem ordens"
+		Portuguese:"Cheque por unidades sem ordens",
+		German: "Untätige Einheiten anzeigen bei Rundenende"
 	}
+
+	"Move units with a single tap":{
+		German: "Einheiten mit einem Klick bewegen"
+	},
+
 
 	"Close":{
 		Italian:"Chiudi"
