--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -227,6 +227,10 @@
 		Japanese:"自動化を停止"
 	}
 
+	"Construct road": {
+		"German": "Straße bauen"
+	}
+
 	"Fortify":{
 		Italian:"Fortifica"
 		Russian:"Укрепить"
