--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -808,6 +808,7 @@
 	}
 
 	"Move units with a single tap":{
+		Italian:"Muovi unità con un solo tocco"
 		German: "Einheiten mit einem Klick bewegen"
 	},
 
@@ -939,6 +940,7 @@
 	}
 
 	"Pick now!": {
+		Italian: "Scegli ora!"
 		German: "Jetzt wählen!"
 	}
 
@@ -2770,7 +2772,7 @@
 
 
 	"Your so-called 'friendship' is worth nothing.":{ // When we have a decleration of friendship to someone and we declare war on them
-    Italian:"La tua cosiddetta 'amicizia' non vale nulla!"  
+    		Italian:"La tua cosiddetta 'amicizia' non vale nulla!"  
 		Portuguese:"Sua chamada 'amizade' não vale nada."
 	}
 
