--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -133,6 +133,8 @@
             Portuguese:"o(a) [construction] foi construirdo em [cityName]"
             Japanese:"[construction]は[cityName]に建てられました"
         }
+		
+		"[wonder] has been built in a faraway land":{}
         
         "Work has started on [construction]":{
             Italian:"Sono iniziati i lavori per [construction]"
@@ -226,6 +228,9 @@
             Portuguese:"Um(a) [unit] inimigo(a) atacout nossa [ourUnit]"
             Japanese:"敵[unit]が私たちの[ourUnit]を攻撃しました"
         }
+
+		"Enemy city [cityName] has attacked our [ourUnit]":{}
+		
         "An enemy [unit] has captured [cityname]":{
             Italian:"Un'unità nemica [unit] ha conquistato [cityname]"
             Russian:"Вражеский [unit] захватил [cityname]"
@@ -264,6 +269,8 @@
             Portuguese:"Um(a) [unit] inimigo(a) destruiu nosso(a) [ourUnit]"
             Japanese:"敵[unit]が私たちの[ourUnit]を破壊しました"
         }
+		
+		"Enemy city [cityName] has destroyed our [ourUnit]":{}
         
         "An enemy [unit] was destroyed while attacking [cityname]":{
             Italian:"Un'unità nemica [unit] è stata distrutta mentre attaccava [cityname]"
