adding MapUnitAction.name(), a user-readable name for actions. Eg "Moving" instead of "moveTo x,y"

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -262,12 +262,16 @@
 		Romanian:"Dormi"
 		Simplified_Chinese:"休眠"
 		Portuguese:"Dormir"
-		German:"Schlafen legen"
+		German:"Schlafen"
 		French:"Dormir"
 		Japanese:"睡眠"
 		Russian:"Спать"
 		Dutch:"Slaap"
 		Spanish:"Dormir"
+	}
+
+	"Moving": {
+		"German": "Bewegen"
 	}
 
 	"Set up":{ // For siege units
