--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -3310,18 +3310,19 @@
 		French:"Coût de mouvement"
 		Simplified_Chinese:"移动力消耗"
 		Portuguese:"Custo de movimento"
-    }
+    	}
 
 	"Rough Terrain":{
+		Italian:"Terreno accidentato"
 		German: "Unwegsames Gelände"
 	}
 
-    " for ":{ //for example:+1 Gold for Gems,Gold,Silver
+    	" for ":{ //for example:+1 Gold for Gems,Gold,Silver
 		Italian:" per "
 		Simplified_Chinese:"，当建造在拥有下列资源的地块上时："
 		French:"par "
 	    Portuguese:"Por "
-    }
+    	}
 
     // Options menu, pointed out by Smashfanful
 
