Added countdown to relationship change with city states

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2645,7 +2645,8 @@
 	"Provides [amountOfCulture] culture at 30 Influence":{}
 	"Provides 3 food in capital and 1 food in other cities at 30 Influence":{}
 	"Provides 3 happiness at 30 Influence":{}
-	"Gift [goldAmount] gold":{}
+	"Gift [goldAmount] gold  (+[influenceAmount] influence)":{}
+	"Relationship changes in another [turnsToRelationshipChange] turns":{}
 	
 
 ////// Diplomatic modifiers
